gitops/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiteworks-app
  namespace: kiteworks-prod
  labels:
    app: kiteworks-app
    environment: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kiteworks-app
  template:
    metadata:
      labels:
        app: kiteworks-app
        environment: prod
    spec:
      containers:
        - name: kiteworks-app
          image: kiteworks-app
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9898
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9898
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9898
            initialDelaySeconds: 15
            periodSeconds: 20
