gitops/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiteworks-app
  namespace: kiteworks-prod
  labels:
    app: kiteworks-app
spec:
  type: LoadBalancer
  selector:
    app: kiteworks-app
  ports:
    - name: http
      port: 80
      targetPort: 9898
      protocol: TCP
